--- a/app/src/main/res/layout/activity_fragment5.xml
+++ b/app/src/main/res/layout/activity_fragment5.xml
@@ -22,6 +22,7 @@
             android:textSize="30dp" />
 
         <ImageView
+            android:id="@+id/image_quickaction"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="15"
