--- a/app/src/main/res/layout/activity_fragment2.xml
+++ b/app/src/main/res/layout/activity_fragment2.xml
@@ -77,49 +77,101 @@
                 android:src="@drawable/ic_baseline_search_black" />
 
         </LinearLayout>
+
         <LinearLayout
-            android:padding="8dp"
             android:id="@+id/text_search_how"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginTop="12dp"
-            android:layout_width="wrap_content"
             android:orientation="horizontal"
-            android:background="@drawable/login_borderbox"
-            android:layout_height="wrap_content">
-            <TextView
-                android:textColor="#000"
+            android:padding="8dp">
+
+            <LinearLayout
+                android:padding="5dp"
+                android:background="@drawable/login_borderbox"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="처분방식 : "/>
-            <TextView
-                android:id="@+id/text_search_result1"
-                android:gravity="center"
+                android:layout_height="35dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="처분방식 : "
+                    android:textColor="#000" />
+
+                <TextView
+                    android:id="@+id/text_search_result1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:text="전체"
+                    android:textColor="#000" />
+
+                <ImageView
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:src="@drawable/ic_baseline_close_24" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:text="전체"
-                android:textColor="#000"
+                android:layout_height="35dp"
+                android:layout_marginLeft="40dp"
+                android:padding="5dp"
+                android:background="@drawable/login_borderbox">
 
-                android:layout_height="30dp"/>
-            <TextView
-                android:layout_marginLeft="4dp"
-                android:textColor="#000"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="물건종류 : "/>
-            <TextView
-                android:id="@+id/text_search_result2"
-                android:textColor="#000"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="전체"/>
-            <ImageView
-                android:layout_width="12dp"
-                android:layout_height="12dp"
-                android:src="@drawable/ic_baseline_close_24"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="4dp"
+                    android:text="물건종류 : "
+                    android:textSize="15dp"
+                    android:textColor="#000" />
 
-
-
-
-
+                <TextView
+                    android:id="@+id/text_search_result2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="전체"
+                    android:textSize="15dp"
+                    android:textColor="#000" />
+                <ImageView
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:src="@drawable/ic_baseline_close_24" />
+            </LinearLayout>
         </LinearLayout>
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_marginLeft="20dp"
+        android:padding="10dp"
+        android:background="@drawable/login_borderbox"
+        android:orientation="horizontal"
+        android:layout_width="170dp"
+        android:layout_height="50dp">
+        <TextView
+            android:textSize="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="제한가격"
+            android:textColor="#000"/>
+        <TextView
+            android:textSize="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="  ~  "
+            android:textColor="#000"/>
+        <TextView
+            android:textSize="15dp"
+            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="제한가격"
+            android:textColor="#000"/>
+        <ImageView
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:src="@drawable/ic_baseline_close_24" />
 
     </LinearLayout>
 
