--- a/app/src/main/res/layout/activity_fragment2.xml
+++ b/app/src/main/res/layout/activity_fragment2.xml
@@ -150,6 +150,7 @@
         android:layout_width="170dp"
         android:layout_height="50dp">
         <TextView
+            android:id="@+id/text_search_select1"
             android:textSize="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -162,6 +163,7 @@
             android:text="  ~  "
             android:textColor="#000"/>
         <TextView
+            android:id="@+id/text_search_select2"
             android:textSize="15dp"
             android:gravity="center"
             android:layout_width="wrap_content"
