--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -58,7 +58,7 @@
                 android:layout_marginTop="70dp"
                 android:background="@drawable/login_borderbox"
                 android:drawableLeft="@drawable/ic_baseline_person_24"
-                android:hint="   아이디를 입력해 주세요."
+                android:hint="   이메일 형식으로 기입해주세요."
                 android:padding="10dp" />
 
             <EditText
@@ -69,7 +69,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@drawable/login_borderbox"
                 android:drawableLeft="@drawable/ic_baseline_lock_24"
-                android:hint="   패스워드를 입력해 주세요."
+                android:hint="   6자리 이상 입력해 주세요."
                 android:padding="10dp" />
 
             <EditText
